panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__abi__test_multiple_structs_passed_as_int_pair.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member string @0 `array<char; 11>`))
   (function-definition external
      print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void`
      (params
         x~3 `char`
         value~4 `struct Struct~1 complete`
         y~5 `char`
         other~6 `struct Struct~1 complete`
         z~7 `char`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 11>>`
                     (member `array<char; 11>` string +0
                        (value~4 `struct Struct~1 complete`))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 11>>`
                     (member `array<char; 11>` string +0
                        (other~6 `struct Struct~1 complete`))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 10>>`
                        (string `array<char; 10>` "%d %d %d\n\0"))))
               (sign-extend `int` (x~3 `char`))
               (sign-extend `int` (y~5 `char`))
               (sign-extend `int` (z~7 `char`))))))
   (function-definition external
      main~8 `fn() -> int`
      (compound-statement
         (struct Struct~1
            (member string @0 `array<char; 11>`))
         (definition value~9 `struct Struct~1 complete`
            (braced
               (subobject +0 (string `array<char; 11>` "0123456789\0"))))
         (struct Struct~1
            (member string @0 `array<char; 11>`))
         (definition v2~10 `struct Struct~1 complete`
            (braced
               (subobject +0 (string `array<char; 11>` "abcdefghjk\0"))))
         (expression
            (call `void`
               (addressof `ptr<fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void>`
                  (print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void`))
               (truncate `char` (123 `int`))
               (value~9 `struct Struct~1 complete`)
               (truncate `char` (42 `int`))
               (v2~10 `struct Struct~1 complete`)
               (truncate `char` (27 `int`)))))))

----- stderr -----
