panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__abi__test_return_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/abi/test_return_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_return_struct.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Size4~1
      (member x @0 `int`))
   (function-definition external
      make_size4~2 `fn(value: int) -> struct Size4~1 complete`
      (params
         value~4 `int`)
      (compound-statement
         (struct Size4~1
            (member x @0 `int`))
         (definition s~5 `struct Size4~1 complete`
            (braced
               (subobject +0 (value~4 `int`))))
         (return (s~5 `struct Size4~1 complete`))))
   (struct Size7~6
      (member string @0 `array<char; 7>`))
   (function-definition external
      make_size7~7 `fn() -> struct Size7~6 complete`
      (compound-statement
         (struct Size7~6
            (member string @0 `array<char; 7>`))
         (definition value~9 `struct Size7~6 complete`
            (braced
               (subobject +0 (string `array<char; 7>` "size 7\0"))))
         (return (value~9 `struct Size7~6 complete`))))
   (struct Size8~10
      (member x @0 `long`))
   (function-definition external
      make_size8~11 `fn() -> struct Size8~10 complete`
      (compound-statement
         (struct Size8~10
            (member x @0 `long`))
         (definition value~13 `struct Size8~10 complete` (braced ∅))
         (expression
            (assign `long`
               (member `long` x +0
                  (value~13 `struct Size8~10 complete`))
               (sign-extend `long` (123 `int`))))
         (return (value~13 `struct Size8~10 complete`))))
   (struct Size11~14
      (member string @0 `array<char; 11>`))
   (function-definition external
      make_size11~15 `fn(use_numbers: bool) -> struct Size11~14 complete`
      (params
         use_numbers~17 `bool`)
      (compound-statement
         (struct Size11~14
            (member string @0 `array<char; 11>`))
         (definition numbers~18 `struct Size11~14 complete`
            (braced
               (subobject +0 (string `array<char; 11>` "0123456789\0"))))
         (struct Size11~14
            (member string @0 `array<char; 11>`))
         (definition letters~19 `struct Size11~14 complete`
            (braced
               (subobject +0 (string `array<char; 11>` "abcdefghij\0"))))
         (return
            (conditional `struct Size11~14 complete`
               (use_numbers~17 `bool`)
               (numbers~18 `struct Size11~14 complete`)
               (letters~19 `struct Size11~14 complete`)))))
   (struct Size16~20
      (member x @0 `long`)
      (member y @8 `long`))
   (function-definition external
      make_size16~21 `fn(x: long, y: long) -> struct Size16~20 complete`
      (params
         x~23 `long`
         y~24 `long`)
      (compound-statement
         (struct Size16~20
            (member x @0 `long`)
            (member y @8 `long`))
         (definition value~25 `struct Size16~20 complete`
            (braced
               (subobject +0 (x~23 `long`))
               (subobject +8 (y~24 `long`))))
         (return (value~25 `struct Size16~20 complete`))))
   (struct Size27~26
      (member string @0 `array<char; 27>`))
   (function-definition external
      make_size27~27 `fn() -> struct Size27~26 complete`
      (compound-statement
         (struct Size27~26
            (member string @0 `array<char; 27>`))
         (definition value~29 `struct Size27~26 complete`
            (braced
               (subobject +0 (string `array<char; 27>` "abcdefghijklmnopqrstuvwxyz\0"))))
         (return (value~29 `struct Size27~26 complete`))))
   (function-definition external
      main~30 `fn() -> int`
      (compound-statement
         (struct Size4~1
            (member x @0 `int`))
         (definition size4~32 `struct Size4~1 complete`
            (call `struct Size4~1 complete`
               (addressof `ptr<fn(value: int) -> struct Size4~1 complete>`
                  (make_size4~2 `fn(value: int) -> struct Size4~1 complete`))
               (42 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (member `int` x +0
                  (size4~32 `struct Size4~1 complete`))))
         (struct Size7~6
            (member string @0 `array<char; 7>`))
         (definition size7~33 `struct Size7~6 complete`
            (call `struct Size7~6 complete`
               (addressof `ptr<fn() -> struct Size7~6 complete>`
                  (make_size7~7 `fn() -> struct Size7~6 complete`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 7>>`
                     (member `array<char; 7>` string +0
                        (size7~33 `struct Size7~6 complete`))))))
         (struct Size8~10
            (member x @0 `long`))
         (definition size8~34 `struct Size8~10 complete`
            (call `struct Size8~10 complete`
               (addressof `ptr<fn() -> struct Size8~10 complete>`
                  (make_size8~11 `fn() -> struct Size8~10 complete`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%ld\n\0"))))
               (member `long` x +0
                  (size8~34 `struct Size8~10 complete`))))
         (struct Size11~14
            (member string @0 `array<char; 11>`))
         (definition numbers~35 `struct Size11~14 complete`
            (call `struct Size11~14 complete`
               (addressof `ptr<fn(use_numbers: bool) -> struct Size11~14 complete>`
                  (make_size11~15 `fn(use_numbers: bool) -> struct Size11~14 complete`))
               (true `bool`)))
         (definition letters~36 `struct Size11~14 complete`
            (call `struct Size11~14 complete`
               (addressof `ptr<fn(use_numbers: bool) -> struct Size11~14 complete>`
                  (make_size11~15 `fn(use_numbers: bool) -> struct Size11~14 complete`))
               (false `bool`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%s\n%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 11>>`
                     (member `array<char; 11>` string +0
                        (numbers~35 `struct Size11~14 complete`))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 11>>`
                     (member `array<char; 11>` string +0
                        (letters~36 `struct Size11~14 complete`))))))
         (struct Size16~20
            (member x @0 `long`)
            (member y @8 `long`))
         (definition size16~37 `struct Size16~20 complete`
            (call `struct Size16~20 complete`
               (addressof `ptr<fn(x: long, y: long) -> struct Size16~20 complete>`
                  (make_size16~21 `fn(x: long, y: long) -> struct Size16~20 complete`))
               (sign-extend `long` (42 `int`))
               (sign-extend `long` (27 `int`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%ld %ld\n\0"))))
               (member `long` x +0
                  (size16~37 `struct Size16~20 complete`))
               (member `long` y +8
                  (size16~37 `struct Size16~20 complete`))))
         (struct Size27~26
            (member string @0 `array<char; 27>`))
         (definition size27~38 `struct Size27~26 complete`
            (call `struct Size27~26 complete`
               (addressof `ptr<fn() -> struct Size27~26 complete>`
                  (make_size27~27 `fn() -> struct Size27~26 complete`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 27>>`
                     (member `array<char; 27>` string +0
                        (size27~38 `struct Size27~26 complete`)))))))))

----- stderr -----
