panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__abi__test_struct_passed_as_int_pair.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/abi/test_struct_passed_as_int_pair.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_struct_passed_as_int_pair.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member string @0 `array<char; 11>`))
   (function-definition external
      print_struct~2 `fn(value: struct Struct~1 complete) -> void`
      (params
         value~4 `struct Struct~1 complete`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (noop-type-conversion `ptr<char>`
                  (addressof `ptr<array<char; 11>>`
                     (member `array<char; 11>` string +0
                        (value~4 `struct Struct~1 complete`))))))))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition value~7 `struct Struct~1 complete`
            (braced
               (subobject +0 (string `array<char; 11>` "0123456789\0"))))
         (expression
            (call `void`
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>`
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void`))
               (value~7 `struct Struct~1 complete`))))))

----- stderr -----
