panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__abi__test_struct_passed_in_single_register.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/abi/test_struct_passed_in_single_register.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_struct_passed_in_single_register.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member x @0 `int`)
      (member y @4 `int`))
   (function-definition external
      print_struct~2 `fn(value: struct Struct~1 complete) -> void`
      (params
         value~4 `struct Struct~1 complete`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (member `int` x +0
                  (value~4 `struct Struct~1 complete`))
               (member `int` y +4
                  (value~4 `struct Struct~1 complete`))))))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition value~7 `struct Struct~1 complete`
            (braced
               (subobject +0 (42 `int`))
               (subobject +4 (27 `int`))))
         (expression
            (call `void`
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>`
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void`))
               (value~7 `struct Struct~1 complete`))))))

----- stderr -----
